oop-koyu/force-app/main/default/objects/CM_Assignment__c/CM_Assignment__c.object-meta.xml
<CustomObject>
    <label>CM Assignment</label>
    <nameField>
        <displayFormat>CMA-{00000}</displayFormat>
        <label>CM Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>