oop-koyu/force-app/main/default/objects/CM_Assignment__c/fields/Handover_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handover_Notes__c</fullName>
    <label>Handover Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>