oop-koyu/force-app/main/default/objects/CM_Assignment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Location must be Location Record Type and Location Type is Center</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <filterItems>
            <field>Account.MANAERP__Location_Type__c</field>
            <operation>equals</operation>
            <value>Center</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CM Assignment History</relationshipLabel>
    <relationshipName>CM_Assignment_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>