oop-koyu/force-app/main/default/objects/CM_Assignment__c/fields/Skip_Affiliation_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>Skip_Affiliation_Provisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Affiliation Provisioning</label>
    <type>Checkbox</type>
</CustomField>